<resources>
    <string name="app_name">weather</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="fav">Favourites</string>
    <string name="alert">Alerts</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="language">Language</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_sec">meter/sec</string>
    <string name="miles_hour">miles/hour</string>
    <string name="cairo">Cairo</string>
    <string name="number">19</string>
    <string name="mostlyclear">Mostly Clear</string>
    <string name="humidity">Humidity</string>
    <string name="cloud">Clouds</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind Speed</string>
    <string name="date">12Mar, 7:33Pm</string>
    <string name="time">7:33Pm</string>
    <string name="saturday">Saturday</string>
    <string name="map_api">AIzaSyALEzKGnX8Gta5jX2RArUMQgtcMtd4cYEs</string>
    <string name="search">Search</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="add_alert">Add Alert</string>
    <string name="select_date">Select Date</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="weather_alert">Weather Alert</string>
    <string name="dismiss">Dismiss</string>
    <string name="hpa"> hpa</string>
    <string name="m_s">m/s</string>
    <string name="m_h">mile/hr</string>
    <string name="c">C ْ </string>
    <string name="f">F ْ </string>
    <string name="k">K ْ </string>

</resources>