<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="eg.iti.sv.weather.home.view.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/alertsFragment"
        android:name="eg.iti.sv.weather.alerts.view.AlertsFragment"
        android:label="@string/alert"
        tools:layout="@layout/fragment_alerts" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="eg.iti.sv.weather.settings.view.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_settingsFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
        <argument
            android:name="isMap"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/favFragment"
        android:name="eg.iti.sv.weather.fav.view.FavFragment"
        android:label="@string/fav"
        tools:layout="@layout/fragment_fav" >
        <action
            android:id="@+id/action_favFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
        <action
            android:id="@+id/action_favFragment_to_favWeatherFragment"
            app:destination="@id/favWeatherFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="eg.iti.sv.weather.map.view.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" >
        <argument
            android:name="isFav"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/favWeatherFragment"
        android:name="eg.iti.sv.weather.favweather.view.FavWeatherFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_fav_weather">
        <argument
            android:name="currentItem"
            app:argType="eg.iti.sv.weather.models.FavPlace" />
    </fragment>
</navigation>