<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_dialog_header"
    app:cardBackgroundColor="@color/primary"
    app:cardCornerRadius="0dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/alert_dialog_header"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/aladin"
            android:text="@string/select_date"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/aladin"
            android:text="@string/add_alert"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/calender_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:srcCompat="@drawable/calendar_icon" />

        <TextView
            android:id="@+id/alert_date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/calender_btn"
            app:layout_constraintStart_toEndOf="@+id/calender_btn"
            app:layout_constraintTop_toTopOf="@+id/calender_btn" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/aladin"
            android:text="@string/from"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/calender_btn"
            app:layout_constraintTop_toBottomOf="@+id/calender_btn" />

        <ImageView
            android:id="@+id/from_time_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/alert_from_txt"
            app:layout_constraintEnd_toStartOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:srcCompat="@drawable/alarm_icon" />

        <TextView
            android:id="@+id/alert_from_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginBottom="1dp"
            android:fontFamily="@font/aladin"
            android:text="@string/to"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/to_time_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/alert_to_txt"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            app:srcCompat="@drawable/alarm_icon" />

        <TextView
            android:id="@+id/alert_to_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <Button
            android:id="@+id/seve_alert_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary"
            android:fontFamily="@font/aladin"
            android:text="@string/save"
            android:textColor="@color/primary"
            app:layout_constraintEnd_toEndOf="@+id/alert_radio_group"
            app:layout_constraintStart_toStartOf="@+id/alert_radio_group"
            app:layout_constraintTop_toBottomOf="@+id/alert_radio_group" />

        <RadioGroup
            android:id="@+id/alert_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alert_from_txt">

            <RadioButton
                android:id="@+id/radio_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aladin"
                android:text="@string/notification"
                android:textColor="@color/white"
                android:textColorHighlight="@color/secondary"
                android:textColorLink="@color/secondary"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aladin"
                android:paddingEnd="6dp"
                android:text="@string/alarm"
                android:textColor="@color/white"
                android:textColorHighlight="@color/secondary"
                android:textColorLink="@color/purple_200"
                android:textSize="16sp" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>